// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle component test should render with all existing states 1`] = `
<div>
  <div
    class="content "
    data-testid="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-testid="circle-head"
    />
    <div
      class="circle   default"
      data-testid="circle-main"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-testid="circle-value"
      >
        1
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-testid="circle-index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-testid="circle-tail"
    />
  </div>
  <div
    class="content "
    data-testid="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-testid="circle-head"
    />
    <div
      class="circle   changing"
      data-testid="circle-main"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-testid="circle-value"
      >
        2
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-testid="circle-index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-testid="circle-tail"
    />
  </div>
  <div
    class="content "
    data-testid="circle"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-testid="circle-head"
    />
    <div
      class="circle   modified"
      data-testid="circle-main"
    >
      <p
        class="text text_type_circle text_color_input letter"
        data-testid="circle-value"
      >
        3
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
      data-testid="circle-index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-testid="circle-tail"
    />
  </div>
</div>
`;

exports[`Circle component test should render with index 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  />
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  >
    5
  </p>
  <div
    class="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="circle-tail"
  />
</div>
`;

exports[`Circle component test should render with isSmall prop 1`] = `
<div
  class="circle  small default"
  data-testid="circle-main"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-testid="circle-value"
  />
</div>
`;

exports[`Circle component test should render with react element in head 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  >
    <a>
      abcd
    </a>
  </div>
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle-tail"
  />
</div>
`;

exports[`Circle component test should render with react element in tail 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  />
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle-tail"
  >
    <a>
      abcd
    </a>
  </div>
</div>
`;

exports[`Circle component test should render with text 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  />
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    >
      abcd
    </p>
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle-tail"
  />
</div>
`;

exports[`Circle component test should render with text in head 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="circle-head"
  >
    abcd
  </div>
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle-tail"
  />
</div>
`;

exports[`Circle component test should render with text in tail 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  />
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="circle-tail"
  >
    abcd
  </div>
</div>
`;

exports[`Circle component test should render without text 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle-head"
  />
  <div
    class="circle   default"
    data-testid="circle-main"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle-value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
    data-testid="circle-index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle-tail"
  />
</div>
`;
